frontend | font family added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,11 @@
       rel="stylesheet"
     />
 
+    
+
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap" rel="stylesheet">
+
+
     <title>TICK3T</title>
   </head>
   <body>
